# MPI-1D-Heat-Flow

./: CMakeLists.txt  README.md  heat1Doutput.csv
src/: heat1D.cc
